Update app generator tool
Update app-gen.py so the user can choose
between Armada or FluxCD packaging, or both.

- Create templates for FluxCD manifest
- Create templates for Flux plugins
- Update app-gen.py so it also supports FluxCD
- Create template for the input file

Story: 2010937
Task: 48913

Change-Id: I2521c3509556910841fd116f5a106e6577aad58a
Signed-off-by: Daniel Caires <daniel.caires@encora.com>

--- a/template_armada/armada-chartgroup.template
+++ b/template_armada/armada-chartgroup.template
@@ -6,5 +6,6 @@ metadata:
 data:
   description: $DESCRIPTION%This is a chartgroup$
   sequenced: $SEQUENCED%false$
-  @CHART_GROUP|2@
+  chart_group:
+  @CHART_NAMES|4@
 
